--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
 	padding: 0;
 }
 
+a {
+	text-decoration: none;
+}
+
 .navbar {
 	background-color: black;
 }
@@ -22,6 +26,12 @@ body {
 
 .list {
 	padding-left: 30px;
+}
+
+.venue {
+	border-style: solid;
+	border-width: 3px;
+	border-bottom: 0px;
 }
 
 #mapDiv {
