--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,12 @@ a {
 	border-bottom: 0px;
 }
 
+.lineup {
+	border-style: solid;
+	border-width: 1px;
+	padding: 10px;
+}
+
 #mapDiv {
 	height: 100%;
 	width: 100%;
