--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a {
 }
 
 .navbar {
-	background-color: black;
+	background:rgba(255,255,255, 0.77);
 }
 
 .header {
@@ -33,6 +33,8 @@ a {
 	border-style: solid;
 	border-width: 3px;
 	border-bottom: 0px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .lineup {
@@ -41,9 +43,21 @@ a {
 	padding: 10px;
 }
 
+.btn {
+	margin: 5px;
+}
+
 #mapDiv {
 	height: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
+}
+
+#searchBar {
+	width: 50%;
+}
+
+#navbar ul {
+	text-align: right;
 }
