--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 
 a {
 	text-decoration: none;
+	background-color: 
 }
 
 .navbar {
@@ -35,12 +36,14 @@ a {
 	border-bottom: 0px;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	background-color: #D8D8D8;
 }
 
 .lineup {
 	border-style: solid;
 	border-width: 1px;
 	padding: 10px;
+	background-color: white;
 }
 
 .btn {
