html and css update

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h1 {
 	border-bottom: 0px;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	background-color: #D8D8D8;
+	background-color: #f1f1f1;
 }
 
 .lineup {
